@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 project (unit_test)
-SET(Boost_USE_STATIC_LIBS ON)
+set(Boost_USE_STATIC_LIBS ON)
 
 find_package( Boost REQUIRED )
 
@@ -15,6 +15,11 @@ if (WIN32)
 		unit_test_utility.hpp
 		unit_test_viterbi.hpp)
 endif (WIN32)
+
+if (UNIX)
+	set (CMAKE_EXE_LINKER_FLAGS -lboost_iostreams)
+endif (UNIX)
+
 add_executable (unit_test ${UNIT_TEST_SRCS})
 target_link_libraries (unit_test ${Boost_LIBRARY_DIRS})
 
